fix mobile menu z-index

--- a/styles/scss/_mobile-menu.scss
+++ b/styles/scss/_mobile-menu.scss
@@ -7,7 +7,7 @@
     left: 0;
     height: 100%;
     width: 100%;
-    z-index: 20;
+    z-index: 100;
     background: rgba(89, 85, 90, 0.5);
     transition: all .3s ease;
     opacity: 0;
